# ibkr

./: .coverage  .gitignore  CLAUDE.md  STRUCTURE.md  base_knowledge.md  pyproject.toml  requirements.txt  run.sh
config/: default.yaml
docs/plans/: 2026-01-05-implementation-plan.md  2026-01-05-phase1-datastore-tdd.md  2026-01-05-phase1-foundation-tdd.md  2026-01-05-phase2-ibkr-integration-tdd.md  2026-01-05-phase3-strategy-framework-tdd.md  2026-01-05-phase4-orchestration-tdd.md  2026-01-05-trading-bot-architecture.md  2026-01-06-phase5-testing-validation-tdd.md
src/: __init__.py  __main__.py
src/collectors/: __init__.py  universe.py
src/collectors/ibkr/: __init__.py  collector.py  connection.py  parsers.py
src/core/: __init__.py  config.py  data_store.py  event_bus.py  execution_engine.py  orchestrator.py
src/models/: __init__.py  events.py  fundamental_data.py  market_data.py  orders.py  strategy.py
src/strategies/: __init__.py  base.py  pipeline.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_end_to_end.py  test_ibkr_connection.py  test_live_data.py
tests/unit/: __init__.py  test_config.py  test_data_store_protocol.py  test_event_bus.py  test_events.py  test_example_value_strategy.py  test_execution_engine.py  test_file_data_store.py  test_fundamental_data.py  test_ibkr_collector.py  test_ibkr_connection.py  test_main.py  test_market_data.py  test_models_package.py  test_orchestrator.py  test_orders.py  test_pipeline.py  test_strategy_base.py  test_strategy_models.py  test_xml_parser.py
(+12 files in other folders)
